# marketplace-simulator

./: .Rhistory  .gitignore  CLAUDE.md  Design principles.md  LICENSE  README.md  Untitled.ipynb  classes.py  colortools.R  listings_views.csv  logger_setup.py  main.R  permutations_effect.csv  permutations_no_effect.csv  pyproject.toml  requirements.txt  test_nb.ipynb  vintalisation.R
.Rproj.user/BA653776/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/BA653776/viewer-cache/: 32E442FE.Rdata  B48634AD.Rdata
.Rproj.user/shared/notebooks/: paths
.ipynb_checkpoints/: classes-checkpoint.py  test_nb-checkpoint.ipynb
docs/specs/: 2026-06-14-phase2-roadmap.md  2026-06-14-simpy-replatform-prd.md
docs/superpowers/plans/: 2026-06-14-phase3-plan1-action-runner.md  2026-06-14-phase3-plan2-pluggable-actions.md  2026-06-14-simpy-replatform-slice.md  2026-06-15-phase3-plan3-emergent-willingness.md  2026-06-15-phase3-plan4-seller-pricing.md  (+5 more)
scripts/: run_slice.py
sim/: __init__.py  actions.py  agents.py  allocation.py  consideration.py  engine.py  events.py  func.py  pricing.py  spec.py  willingness.py
tests/: test_actions.py  test_allocation.py  test_api.py  test_clock.py  test_consideration.py  test_events.py  test_funnel.py  test_funnel_bid.py  test_hooks.py  test_lifecycle.py  test_lifecycle_full.py  test_markdown.py  test_market.py  test_marketplace.py  test_population.py  test_pricing.py  test_pricing_local.py  test_properties.py  test_proposals.py  test_settlement.py  test_spec.py  test_supply.py  test_variant.py  test_willingness.py
(+9 files in other folders)
