[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-simulator"
version = "2.0.0a0"
description = "Agent-based, continuous-time SimPy marketplace simulator (emergent funnel/conversion/prices)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "simpy>=4,<5",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
# Only the active SimPy engine ships. The legacy `classes.py` daily-loop engine,
# the smoke harness in `scripts/`, the tests, and the large `slice_events.jsonl`
# sample are deliberately excluded from the installed package.
py-modules = []

[tool.setuptools.packages.find]
include = ["sim*"]
